--- a/app/src/main/res/layout/layout_creditcalc.xml
+++ b/app/src/main/res/layout/layout_creditcalc.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:padding="10dp"
         android:orientation="vertical">
         <!-- The crop picker header -->
         <TextView
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/forage_species_header"
-            android:textSize="22sp"
+            android:textSize="19sp"
             android:padding="5dp"
             android:textColor="#000"/>
         <!--  crop picker -->
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/soil_type_header"
-            android:textSize="22sp"
+            android:textSize="19sp"
             android:padding="5dp"
             android:textColor="#000"/>
         <!-- The soil type picker -->
@@ -107,7 +107,7 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/stand_density_header"
             android:padding="5dp"
-            android:textSize="22sp"
+            android:textSize="19sp"
             android:textColor="#000"/>
         <!-- The stand density picker -->
         <LinearLayout
@@ -168,7 +168,7 @@
             android:padding="5dp"
             android:layout_gravity="center_horizontal"
             android:text="@string/regrowth_type_header"
-            android:textSize="22sp"
+            android:textSize="19sp"
             android:textColor="#000"/>
         <!-- The soil type picker -->
         <LinearLayout
@@ -228,7 +228,8 @@
                 android:padding="5dp"
                 android:text="@string/output_header"
                 android:textColor="@color/black"
-                android:textSize="22sp"/>
+                android:textSize="20sp"/>
+
             <!-- The result -->
             <TextView
                 android:id="@+id/output_text"
@@ -237,16 +238,12 @@
                 android:gravity="center_horizontal"
                 android:text="@string/result_default"
                 android:textColor="@color/black"
-                android:textSize="55sp"/>
-            <!-- The result range -->
-            <TextView
-                android:id="@+id/output_range"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="@string/range_default"
-                android:textColor="@color/dark_grey"
-                android:textSize="14sp"/>
+                android:paddingBottom="10dp"
+                android:layout_weight="1"
+                android:textSize="50sp"/>
+
+
+
         </LinearLayout>
 
 
