Added Info & Email Page
Internal files are used to store data

--- a/app/src/main/res/layout/email.xml
+++ b/app/src/main/res/layout/email.xml
@@ -5,64 +5,88 @@
 
 <!-- Makes the activity scrollable -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content">
-	<!-- A wrapper that is necessary for the sake of having a parent for the main layout -->
-	<LinearLayout
-    android:id="@+id/wrapper"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">	
-		<!-- The main LinearLayout -->
-	    <LinearLayout
-	    android:id="@+id/email_layout"
-	    android:layout_width="wrap_content"
-	    android:layout_height="fill_parent"
-	    android:orientation="vertical"
-	    >
-    		<!-- The button that goes to the default email application -->
-		    <Button
-		    android:id="@+id/send_button"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="OK"/>
-	    	<!-- A layout for the subject line -->
-	    	<LinearLayout
-		    android:id="@+id/subject_line_layout"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:orientation="horizontal">
-		    	<!-- The label that says Subject: -->
-			    <TextView
-			    android:id="@+id/subject_header"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:text="@string/subject_header"
-			    android:textColor="@color/black"/>
-			    <!-- The subject input -->
-		    	<EditText 
-		    	android:id="@+id/subject_input"
-		    	android:layout_width="fill_parent"
-		    	android:layout_height="wrap_content"
-		    	android:lines="1"
-		    	android:hint="@string/subject"
-		    	android:scrollHorizontally="true"/>
-		    </LinearLayout>
-		    <!-- The label that says Text: -->
-		    <TextView
-		    android:id="@+id/text_header"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:text="@string/text_header"
-		    android:textColor="@color/black"/>
-		    <!-- The body text input -->
-		    <EditText 
-	    	android:id="@+id/text_input"
-	    	android:layout_width="fill_parent"
-	    	android:layout_height="wrap_content"
-	    	android:hint="@string/body_text"
-	    	android:scrollbars="vertical"/> 	    
-		</LinearLayout>
-	</LinearLayout>
+    android:layout_height="wrap_content">
+    <!-- A wrapper that is necessary for the sake of having a parent for the main layout -->
+    <LinearLayout
+        android:id="@+id/wrapper"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:padding="15dp">
+        <!-- The main LinearLayout -->
+        <LinearLayout
+            android:id="@+id/email_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+            <!-- The button that goes to the default email application -->
+
+
+            <EditText
+                android:id="@+id/subject_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/subject"
+                android:lines="1"
+                android:scrollHorizontally="true" />
+
+            <EditText
+                android:id="@+id/text_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/body_text"
+                android:scrollbars="vertical" />
+
+
+            <LinearLayout
+                android:id="@+id/subject_line_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+
+                android:orientation="horizontal">
+
+
+                <Button
+                    android:id="@+id/legume_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+
+                    android:layout_weight="1"
+                    android:background="@drawable/toggle_left_button_unselected"
+
+                    android:text="Legume Report" />
+
+                <Button
+                    android:id="@+id/manure_button"
+                    android:layout_alignRight="@+id/legume_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/toggle_right_button_unselected"
+
+
+                    android:text="Manure Report" />
+
+                <Button
+                    android:id="@+id/send_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/background_green"
+                    android:drawableLeft="@drawable/ic_action_send_now"
+                    android:layout_weight="1"
+                    android:layout_alignParentRight="true"
+                    android:text="Send" />
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
 </ScrollView>
 
 	
