--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:id="@android:id/tabs"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="#444"/>
+            android:background="@color/text_green"/>
         <!-- The frame layout where activities are held -->
         <FrameLayout
             android:id="@android:id/tabcontent"
